--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -72,7 +72,7 @@
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="£2.29"
+                    android:text="worth of £2.29"
                     android:textColor="@color/darkGrey"
                     android:textSize="16sp" />
 
@@ -82,12 +82,40 @@
         </LinearLayout>
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:text="My tools"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"/>
+
+        <TextView
             style="@style/accountList"
             android:text="My ID" />
 
         <TextView
             style="@style/accountList"
+            android:text="My product scanner" />
+
+        <TextView
+            style="@style/accountList"
             android:text="My feet scan" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:text="My details and preferences"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"/>
 
         <TextView
             style="@style/accountList"
@@ -104,6 +132,18 @@
         <TextView
             style="@style/accountList"
             android:text="Notifications" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:text="My orders"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@android:color/black"/>
 
         <TextView
             style="@style/accountList"
