--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -9,6 +9,7 @@
     android:layout_alignParentStart="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
+    android:background="@android:color/white"
     tools:context=".CategoryActivity">
 
 
@@ -83,6 +84,10 @@
             android:layout_marginRight="16dp">
 
         </ListView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="60dp" />
 
     </LinearLayout>
 
