--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -184,10 +184,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="16dp"
-            android:text="2299 points worth of £2.29"
+            android:text="Earn 2299 points worth of £2.29"
             android:padding="5dp"
             android:textSize="18sp"
-            android:textStyle="bold"
+            android:textStyle="italic"
             android:textColor="@color/darkGrey"/>
 
     </LinearLayout>
