--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
 
             <RelativeLayout
                 style="@style/news"
-                android:background="@drawable/hot_shoes">
+                android:background="@drawable/long_shoes">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -66,7 +66,7 @@
 
             <RelativeLayout
                 style="@style/news"
-                android:background="@drawable/hot_new">
+                android:background="@drawable/collection">
 
                 <TextView
                     android:layout_width="wrap_content"
